<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainMenu">

    <TextView
        android:id="@+id/mainMenu_GameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="40dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintBottom_toTopOf="@+id/mainMenu_GameBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainMenu_OptionsBtn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_baseline_circle_24"
        android:foreground="@drawable/ic_baseline_settings_24"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/mainMenu_OptionsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:text="@string/mainMenu_OptionsBtn"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenu_OptionsBtn" />

    <Button
        android:id="@+id/mainMenu_HelpBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/ic_baseline_help_outline_24"
        app:layout_constraintBottom_toTopOf="@+id/mainMenu_HelpText"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/mainMenu_GameBtn"
        android:layout_width="170dp"
        android:layout_height="59dp"
        android:layout_marginStart="256dp"
        android:layout_marginEnd="257dp"
        android:layout_marginBottom="84dp"
        android:text="@string/mainMenu_GameBtn"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/mainMenu_HelpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginBottom="16dp"
        android:text="@string/mainMenu_HelpBtn"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>